--- a/.eslintrc
+++ b/.eslintrc
@@ -5,14 +5,22 @@
   },
   "extends": [
     "eslint:recommended",
+    "plugin:prettier/recommended",
     "airbnb/base",
+    "prettier"
   ],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaFeatures": {},
     "ecmaVersion": 6
   },
-  "plugins": [],
+  "globals": {
+    "DEPENDENCIES": false,
+    "VERSION": false
+  },
+  "plugins": [
+    "prettier"
+  ],
   "rules": {
     "class-methods-use-this": 0,
     "no-bitwise": 0,
