--- a/package.json
+++ b/package.json
@@ -25,42 +25,59 @@
   "files": [
     "dist"
   ],
-  "devDependencies": {
-    "autoprefixer": "^8.2.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "file-loader": "^1.1.11",
-    "higlass": "^1.2.8",
-    "html-webpack-plugin": "^3.1.0",
-    "node-sass": "^4.9.4",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
-    "postcss-flexbugs-fixes": "^3.3.0",
-    "postcss-loader": "^2.1.3",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "unminified-webpack-plugin": "^2.0.0",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.10"
-  },
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open",
     "ghp": "npm run prerelease; rm -rf ../higlass-geojson-ghp/*; cp -r ./dist/* ../higlass-geojson-ghp/; touch ../higlass-geojson-ghp/.nojekyll; touch ../higlass-geojson-ghp/CNAME; echo 'higlass-geojson.lekschas.de' > ../higlass-geojson-ghp/CNAME; cp ./node_modules/higlass/dist/scripts/hglib.js ../higlass-geojson-ghp/; cp ./node_modules/higlass/dist/styles/hglib.css ../higlass-geojson-ghp/",
-    "prerelease": "rm -rf dist/*; npm run build; zip -r dist.zip dist"
+    "lint": "eslint src webpack.config.js; stylelint src",
+    "prerelease": "rm -rf dist/*; npm run build; zip -r dist.zip dist",
+    "start": "webpack-dev-server --mode development --open"
   },
   "dependencies": {
     "higlass-register": "^0.1.0",
-    "d3-geo": "^1.10.0"
+    "d3-geo": "^1.11.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "acorn": "^6.0.4",
+    "autoprefixer": "^9.3.1",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^v3.3.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
+    "higlass": "1.3.0-rc.2",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.1.4",
+    "lint-staged": "^8.1.0",
+    "node-sass": "^4.10.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss": "^7.0.6",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.15.2",
+    "pretty-quick": "^1.8.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "stylelint": "^9.8.0",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-scss": "^3.4.0",
+    "stylelint-webpack-plugin": "^0.10.5",
+    "terser-webpack-plugin": "1.1.0",
+    "unminified-webpack-plugin": "^2.0.0",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  },
+  "hgDependencies": {
+    "higlass": "1.3.0-rc.2"
   }
 }
