--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "higlass-geojson",
-  "version": "0.2.0",
+  "version": "0.3.0-rc.1",
   "description": "HiGlass GeoJSON Track",
   "keywords": [
     "HiGlass",
@@ -22,11 +22,13 @@
   },
   "main": "src/index.js",
   "unpkg": "dist/higlass-geojson.min.js",
+  "jsdelivr": "dist/higlass-geojson.min.js",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "rollup -c; webpack --mode production",
     "ghp": "npm run prerelease; rm -rf ../higlass-geojson-ghp/*; cp -r ./dist/* ../higlass-geojson-ghp/; touch ../higlass-geojson-ghp/.nojekyll; touch ../higlass-geojson-ghp/CNAME; echo 'higlass-geojson.lekschas.de' > ../higlass-geojson-ghp/CNAME; cp ./node_modules/higlass/dist/scripts/hglib.js ../higlass-geojson-ghp/; cp ./node_modules/higlass/dist/styles/hglib.css ../higlass-geojson-ghp/",
     "lint": "eslint src webpack.config.js; stylelint src",
     "prerelease": "rm -rf dist/*; npm run build; zip -r dist.zip dist",
@@ -40,10 +42,8 @@
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "acorn": "^6.0.4",
-    "autoprefixer": "^9.3.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "css-loader": "^1.0.1",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^v3.3.0",
@@ -53,26 +53,25 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^2.0.0",
     "higlass": "1.3.0-rc.2",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.1.4",
     "lint-staged": "^8.1.0",
-    "node-sass": "^4.10.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss": "^7.0.6",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^3.0.0",
     "prettier": "^1.15.2",
     "pretty-quick": "^1.8.0",
+    "rollup": "^0.67.3",
+    "rollup-plugin-buble": "^0.19.4",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-filesize": "^5.0.1",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-terser": "^3.0.0",
+    "rollup-plugin-visualizer": "^0.9.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "^9.8.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-scss": "^3.4.0",
-    "stylelint-webpack-plugin": "^0.10.5",
-    "terser-webpack-plugin": "1.1.0",
-    "unminified-webpack-plugin": "^2.0.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
