--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "build": "rollup -c; webpack --mode production",
     "ghp": "npm run prerelease; rm -rf ../higlass-geojson-ghp/*; cp -r ./dist/* ../higlass-geojson-ghp/; touch ../higlass-geojson-ghp/.nojekyll; touch ../higlass-geojson-ghp/CNAME; echo 'higlass-geojson.lekschas.de' > ../higlass-geojson-ghp/CNAME; cp ./node_modules/higlass/dist/scripts/hglib.js ../higlass-geojson-ghp/; cp ./node_modules/higlass/dist/styles/hglib.css ../higlass-geojson-ghp/",
-    "lint": "eslint src webpack.config.js; stylelint src",
+    "lint": "eslint src rollup.config.js webpack.config.js; stylelint src",
     "prerelease": "rm -rf dist/*; npm run build; zip -r dist.zip dist",
     "start": "webpack-dev-server --mode development --open"
   },
