--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "higlass-geojson",
-  "version": "0.3.0-rc.1",
+  "version": "0.3.0",
   "description": "HiGlass GeoJSON Track",
   "keywords": [
     "HiGlass",
@@ -28,8 +28,8 @@
     "src"
   ],
   "scripts": {
-    "build": "rollup -c; webpack --mode production",
-    "ghp": "npm run prerelease; rm -rf ../higlass-geojson-ghp/*; cp -r ./dist/* ../higlass-geojson-ghp/; touch ../higlass-geojson-ghp/.nojekyll; touch ../higlass-geojson-ghp/CNAME; echo 'higlass-geojson.lekschas.de' > ../higlass-geojson-ghp/CNAME; cp ./node_modules/higlass/dist/scripts/hglib.js ../higlass-geojson-ghp/; cp ./node_modules/higlass/dist/styles/hglib.css ../higlass-geojson-ghp/",
+    "build": "rollup -c; webpack --mode production; cp node_modules/higlass/dist/hglib.js ./docs; cp node_modules/higlass/dist/hglib.css ./docs",
+    "ghp": "npm run prerelease; rm -rf ../higlass-geojson-ghp/*; cp -r ./docs/* ../higlass-geojson-ghp/; touch ../higlass-geojson-ghp/.nojekyll; touch ../higlass-geojson-ghp/CNAME; echo 'higlass-geojson.lekschas.de' > ../higlass-geojson-ghp/CNAME",
     "lint": "eslint src rollup.config.js webpack.config.js; stylelint src",
     "prerelease": "rm -rf dist/*; npm run build; zip -r dist.zip dist",
     "start": "webpack-dev-server --mode development --open"
@@ -53,7 +53,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "higlass": "1.3.0-rc.2",
+    "higlass": "1.5.7",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.1.4",
     "lint-staged": "^8.1.0",
@@ -77,6 +77,6 @@
     "webpack-dev-server": "^3.1.10"
   },
   "hgDependencies": {
-    "higlass": "1.3.0-rc.2"
+    "higlass": "1.5.7"
   }
 }
